@@ -2,6 +2,7 @@ package resumebuilder.back_end.mappers;
 
 import java.util.List;
 
+import resumebuilder.back_end.domain.dto.ProjectDto;
 import resumebuilder.back_end.domain.entities.ProjectEntity;
 import resumebuilder.back_end.domain.model.Project;
 import java.util.stream.Collectors;
@@ -17,9 +18,10 @@ public class ProjectMapper {
         this.modelMapper = modelMapper;
     }
 
-    public List<ProjectEntity> mapToEntity(List<Project> projectsFromDto) {
+    public List<ProjectEntity> mapToEntity(List<Project> projectsFromDto, String userId) {
         List<ProjectEntity> entities = projectsFromDto.stream()
-                .map(project -> modelMapper.map(project, ProjectEntity.class)).collect(Collectors.toList());
+                .map(project -> modelMapper.map(project, ProjectEntity.class)).toList();
+        entities.forEach(pe -> pe.setUserId(userId));
         return entities;
     }
 
@@ -30,4 +32,13 @@ public class ProjectMapper {
                         entity.getStartDate(), entity.getEndDate(), entity.getDescription()))
                 .collect(Collectors.toList());
     }
+
+    public ProjectEntity mapToEntity(ProjectDto projectDto) {
+        return modelMapper.map(projectDto, ProjectEntity.class);
+    }
+
+    public ProjectDto mapToDto(ProjectEntity projectEntity) {
+        return modelMapper.map(projectEntity, ProjectDto.class);
+    }
+
 }
